--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Analytics IA - Dashboard Educacional</title>
+		<title>Womp Analíticas</title>
 		<script src="chart.js"></script>
 		<link
 			rel="stylesheet"
