--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@
 							<i class="fas fa-sync-alt"></i>
 							<span>Atualizar</span>
 						</div>
+						<a
+							href="https://docs.google.com/forms/d/e/1FAIpQLSfHnp3qVozuatdxsLLPxp791AcDr2Yt6BngAvZfQhSFEqn8cQ/viewform"
+							target="_blank"
+							class="refresh-btn"
+							title="Acessar o formulário de coleta de dados"
+						>
+							<i class="fas fa-file-alt"></i>
+							<span>Responder Forms</span>
+						</a>
 					</div>
 				</header>
 
